--- a/header.tex
+++ b/header.tex
@@ -80,6 +80,8 @@
 \newcommand{\mybottomrule}{\specialrule{0.12em}{0em}{0em}} 
 \renewcommand{\arraystretch}{1.2}
 
+\usepackage{placeins}
+
 %\renewcommand{\thesubfigure}{\thefigure.\arabic{subfigure}}
 %\makeatletter
 %\renewcommand{\p@subfigure}{}
@@ -87,3 +89,6 @@
 %\makeatother
 
 %\makeindex
+
+\hyphenation{
+}
