--- a/literature.bib
+++ b/literature.bib
@@ -97,6 +97,14 @@
          note = "Stand 23.01.2014",
      }
  
+  @misc{vogel:di,
+          author = "Vogel, Lars",
+          title = "Using dependency injection in Java - Introduction",
+          year = "2013",
+          url = "{http://www.vogella.com/tutorials/DependencyInjection/article.html}",
+          note = "Stand 17.02.2014",
+      }
+ 
  @misc{eclipse:swt,
           author = "{The Eclipse Foundation}",
           title = "SWT: The Standard Widget Toolkit",
@@ -133,6 +141,13 @@
  	PUBLISHER    = "B.G. Teubner Stuttgart Leipzig",
  	YEAR         = "2000",
  }
+ 
+ @BOOK{nisch:bv,
+  	AUTHOR       = "Nischwitz, Alfred and Fischer, Max and Haberäcker Peter and Socher, Gudrun",
+  	TITLE        = "Computergrafik und Bildverarbeitung - Band I: Computergrafik",
+  	PUBLISHER    = "Vieweg+Teubner",
+  	YEAR         = "2011",
+  }
  
  @BOOK{java:insel,
   	AUTHOR       = "Ullenboom, Christian",
