--- a/implmentation.tex
+++ b/implmentation.tex
@@ -3,12 +3,14 @@
 Dieses Kapitel erläutert den Implementierungsvorgang des Java Medical Imaging Toolkits. Besonderer Wert wird auf die Umsetzung der Blattknoten wie in Kapitel \ref{architecture} Abschnitt \ref{jmedikit_structure} gelegt, da diese Anwendungsteile direkt mit dem Anwender in Aktion treten.\\
 Nach einer Beschreibung wie die DICOM-Objekte repräsentiert werden, wird umfangreich auf die Bilddarstellung und Manipulation eingegangen.
 
+\FloatBarrier
 \section{Implementierung der DICOM-Objekte}
 
 Die beiden Schnittstellen \textit{IDicomData} und \textit{IDicomImageData} bilden die Grundlagen aller DICOM-Objekte die vom jMediKit erzeugt werden und sind gleichzeitig die einzige Kommunikationsmöglichkeit zu den externen Bibliotheken. Der abstrakte Adapter \textit{ADicomObject} stellt die Funktionen beider Schnittstellen zur Verfügung. Die wichtigsten Methoden stellen das Auslesen der Pixel und den einzelnen Tags eines DICOM-Objekts dar. \\
 Das eingebundene \textit{dcm4che} bietet neben der Verarbeitung von DICOM-Objekten auch eine Implementierung des Kommunikations- und Speicherstandards von DICOM an. Während der aktuellen Entwicklung wurde allerdings nur ein Bruchteil der DICOM-Verarbeitung zur Erfüllung der Anforderungen benötigt und der Kommunikations- und Speicherprozess fand keine Beachtung. Bei einer Implementierung sollte dennoch eine zukünftige Erweiterung im Auge behalten werden. Dabei soll ebenso das Open-Closed-Prinzip Beachtung finden.\\
 Hierbei werden die Schnittstellen in fachspezifische Domänen eingeteilt. Das bedeutet \textit{IDicomData} ist für das Verarbeiten der Tags zuständig, während \textit{IDicomImageData} ausschließlich Bilddaten verarbeitet. Für weitere Versionen können weitere Domänen implementiert werden, wie zum Beispiel eine Schnittstelle \textit{IDicomNetworkData}. Der Adapter vereint die Domänen zu einem vollen DICOM-Objekt. 
 
+\FloatBarrier
 \section{Der DicomBrowser}
 Der DicomBrowser ist der zentrale Part zum Transfer der DICOM-Dateien aus dem Dateisystem zu les- und verarbeitbaren DICOM-Objekten. Abbildung \ref{dicombrowser} zeigt die Darstellung nach dem Einlesenen eines Ordners mit DICOM-Dateien. Die Repräsentation entspricht dem ER-Modell aus Kapitel \ref{grundlagen} Abschnitt \ref{grundlagen:iod}. Der Knoten $\backslash$ symbolisiert die Wurzel. \textit{BRAINX}\footnote{Beispieldatensätze verfremden die tätslchlichen Patientennamen. Originale Datensätze hätten die Form \textit{Nachname\^{}Vorname}} steht für den Patientenname, gefolgt von in diesem Beispiel einer Studie, die wiederum aus sieben Serien besteht. Die einzelnen DICOM-Objekte als Blattknoten werden aufgrund der Übersichtlichkeit nicht angezeigt.\\
 Die Repräsentation der Dateien ist nicht immer geordnet wie es das ER-Modell vorgibt und man kann nicht von einer sortierten Ordnerstruktur ausgehen. Die PACS-Software \textit{dcm4chee} ordnet die Daten beispielsweise nach dem Aufnahmedatum. Es wird eine Datenstruktur benötigt, die der DICOM Object Definiton entspricht.
@@ -22,7 +24,8 @@ Die Repräsentation der Dateien ist nicht immer geordnet wie es das ER-Modell vo
   \vspace{0.5cm}
 \end{figure}
 
-\subsection{Die Baumstruktur} \label{treestructure}
+%\FloatBarrier
+%\subsection{Die Baumstruktur} \label{treestructure}
 Sowohl die Anzeige, als auch die interne Behandlung der Daten soll so nah wie möglich an den DICOM-Standard angelehnt sein und unabhängig von der Auslieferung\footnote{Unabhängig davon, ob Dateien von der Festplatte geladen oder über das Netzwerk bezogen werden.} der Dateien die Struktur des ER-Modells haben.\\
 Ein Baum als Datenstruktur erfüllt die grundlegende Repräsentation mit den verschiedenen Knotentypen aus Patientenname, Studien, Serien und den DICOM-Objekten.\\
 Dadurch ergibt sich mit der Wurzel eine Höhe von
@@ -91,7 +94,7 @@ Jede Datei repräsentiert ein Blatt im Baum und somit ein DICOM-Objekt. Dadurch 
 Bei der Instantiierung des DICOM-Objekts wird direkt die UID über \textit{SOP Instance UID} zugewiesen. Als nächster Schritt wird aus dem DICOM-Objekt der Pfad von der Wurzel zum Objekt ermittelt. Dazu werden \textit{Patient ID}, \textit{Study Instace UID} und \textit{Series Instance UID} des Objekts ausgelesen. Nun wird der Baum nach den entsprechenden Objekten und den UIDs durchsucht. Sind diese nicht vorhanden, wird das zugehörige Objekt erzeugt und in den Baum eingefügt, bis letztendlich das DICOM-Objekt als Blatt eingehängt werden kann.\\
 Mittels dieser Sortierung entsprechen die Elemente im DicomBrowser der Darstellung des ER-Modells.
 
-
+\FloatBarrier
 \section{Repräsentation der Pixeldaten}
 
 Ganzzahlige Datentypen in Java (\textit{byte}, \textit{short}, \textit{int}, \textit{long}) werden im Zweierkomplement kodiert\cite[S.106]{java:insel}]. Dadurch sind nur Werte im Bereich von $[-2^{BIT-1}, 2^{BIT-1}-1]$. Das entspricht beim Datentyp \textit{short} dem Intervall von $[-2^{15}, 2^{15}-1] \rightarrow [-32768, 32767]$.\\
@@ -132,7 +135,8 @@ Medizinische Grauwertbilder besitzen meist eine Tiefe von 8-, 12- und 16-Bit. Zu
 Tabelle \ref{java:bildtypen} zeigt eine Darstellung der implementierten Bildtypen und die zugehörigen Datentypen der Pixel im Quelltext. Haben die Pixeldaten eines DICOM-Objekts eine Tiefe von 8-Bit und sind nicht vorzeichenbehaftet, wird zur Repräsentation in der Implementierung ein Array des Typs \textit{short} verwendet, um alle Werte aufnehmen zu können.\\
 Der Datentyp \textit{int} könnte alle Pixelwerte eines DICOM-Objekts aufnehmen. So liegt es nahe, dass Integer durchgehend als Datentyp verwendet wird. Arbeitet man allerdings mit 8-Bittiefe ohne Vorzeichen, wird der Speicherbedarf von 16 auf 32 Bit pro Pixel verdoppelt. Daher ist es sinnvoll die Bildtypen zu kategorisieren.
 
-\subsection{Räumliche Sortierung der Bilddaten}
+\FloatBarrier
+\section{Räumliche Sortierung der Bilddaten}
 
 Beim Erstellen des Baums aus Abschnitt \ref{treestructure} wird rekursiv das Verzeichnis durchlaufen und nach lesbaren DICOM-Objekten gesucht. Ist die Suche erfolgreich, wird das Objekt dem Baum hinzugefügt. Hierbei kann das Problem auftreten, dass Dateien in der falschen Reihenfolge importiert werden. So kann es passieren, dass ein Importvorgang abhängig vom Dateinamen Objekte dem Baum hinzufügt. Die räumliche Reihenfolge der einzelnen Schichten entspricht allerdings keineswegs dem Dateinamen\footnote{Je nach Sortierung innerhalb des Betriebssystems könnte ein Import auch nach dem Änderungsdatum erfolgen} oder anderen dateibezogenen Reihenfolgen. Dadurch wird, wie schon bei der Sortierung nach dem ER-Modell, eine Methode benötigt, mittels DICOM-Tags die korrekte Reihenfolge der Bilddaten herzustellen.\\
 Der Standard verfügt über mehrere Tags, welche die richtige Reihenfolge andeuten. \textit{Instance Number} ist nach dem Standard \cite[C.7.6.1]{dicom:iod} eine Nummer, die ein Bild identifiziert. Während der Entwicklung entsprach dieser Wert der Testbilder der dargestellten Reihenfolge, jedoch ist keine Information enthalten ob diese der tatsächlichen Reihenfolge im Raum entspricht. So könnte der Wert für die Aufnahmenreihenfolge oder andere konsekutive auf- oder absteigende Folgen stehen. Dadurch ist \textit{Instance Number} nur bedingt geeignet.\\
@@ -178,7 +182,8 @@ Mit Hilfe dieser Kriterien lassen sich die Bilder über den Tag \textit{Image Po
 Durch eine Implementierung des Interface \textit{Comparable\textless AImage\textgreater} in \textit{AImage} unter Berücksichtigung dieser Vorgehensweise ist eine einfache und für diesen Zweck ausreichend schnelle Sortierung der Bildebenen mögliche. Somit erfolgt die Anordnung des Baums und der Bilder unabhängig der Dateistruktur.\\
 Voraussetzung für diese Umsetzung ist, dass die Bildebenen parallel zu den Koordinatenachsen verlaufen. Bei Bildreihen mit Kurven oder einem schrägen Verlauf kann keine dominante Achse bestimmt werden.
 
-\section{Zeichnen und manipulieren der Bilddaten}
+\FloatBarrier
+\section{Zeichnen und manipulieren der Bilddaten} \label{drawandmanipulate}
 
 Sowohl die DICOM-Objekte, als auch Bilddaten stehen im Speicher zur Verarbeitung bereit. Dieser Abschnitt befasst sich mit der Visualisierung dieser Daten. Wie aus Kapitel \ref{architecture} Abschnitt \ref{ivp_architecture} bekannt ist, erfolgt die Darstellung der Bilder im \textit{ImageViewPart} der Anwendung. Innerhalb des Parts können bis zu vier \textit{ImageViewComposites } angezeigt werden. Diese dienen vor allem zur Bedienung des enthaltenen \textit{DicomCanvas}. So kann mit Hilfe der Scrollleiste durch den dreidimensionalen Datensatz navigiert, oder Informationen wie das Koordinatensystem angezeigt und versteckt werden. Die tatsächliche Anzeige der Bilddaten findet im Canvas-Element statt. Eine direkte Manipulation der Bilder erfolgt durch die Auswahl eines Werkzeugs.\\
 Die Breite und Höhe der Zeichenfläche ist unter anderem abhängig von der Zahl der angezeigten \textit{ImageViewComposites}, der Bildschirmgröße und dessen Auflösung. Je mehr Composites angezeigt werden, desto kleiner wird der Bereich für das \textit{DicomCanvas}. So kann der Fall eintreten, dass die Dimension der Zeichenfläche nicht ausreicht, um ein Bild vollständig anzuzeigen, da das Bild größer als die zur Verfügung stehender Fläche ist. Dadurch muss dem Nutzer eine Möglichkeit gegeben werden, nicht sichtbare Details in den sichtbaren Bereich schieben zu können.\\
@@ -209,6 +214,8 @@ Die Faktoren DICOM-Objekt, Bedienelemente der Composites, Werkzeuge und die vers
 \end{figure}
 
 \begin{enumerate}
+\item \textbf{Ebenenrekonstruktion}\\
+	Nach Bedarf hat der Anwender die Möglichkeit eine axiale, coronale oder sagittale Ebenendarstellung zu wählen. Wird diese Option angewendet, wird der Bilddatensatz neu berechnet.
 \item \textbf{Bilddaten initialisieren}\\
 	Abhängig vom gewählten Index der Scrollleiste des \textit{ImageViewComposites} wird das entsprechende Bild aus dem 3D-Datensatz geladen.
 \item \textbf{Koordinaten des geladenen Bildes berechnen}\\
@@ -225,7 +232,79 @@ Die Faktoren DICOM-Objekt, Bedienelemente der Composites, Werkzeuge und die vers
 	Beide Hooks stellen Einhängepunkte für Werkzeuge dar. Das sind abstrakte Funktionen, die von konkreten Werkzeugen implementiert werden. Jeweils vor den Berechnungen und nach Abschluss des Zeichenvorgangs werden diese Funktionen aufgerufen und ausgeführt. So könnten zum Beispiel je nach Werkzeug zusätzliche Informationen eingezeichnet werden.
 \end{enumerate}
 
-Die Bereiche der Koordinatenberechnung, Interpolation und das Zeichnen der Informationen werden in den folgenden Abschnitten genauer erläutert. Die Initialisierung und das Zeichnen des Bildes sind einfache Operationen. Die Fensterung entspricht dem Algorithmus \ref{windowing_algo} aus Abschnitt \ref{windowing}.
+Die Bereiche der Rekonstruktion, Koordinatenberechnung, Interpolation und das Zeichnen der Informationen werden in den folgenden Abschnitten genauer erläutert. Die Initialisierung und das Zeichnen des Bildes sind einfache Operationen. Die Fensterung entspricht dem Algorithmus \ref{windowing_algo} aus Abschnitt \ref{windowing}.
+
+\FloatBarrier
+\subsection{Die Rekonstruktion der Ebenen}
+
+Mit einem dreidimensionalen Datensatz ist es möglich, eine beliebige Ebene durch die Voxel zu legen. Dadurch kann man unter anderem eine dreidimensionale Darstellung berechnen, da die Ebenen aus frei wählbaren Winkeln betrachtet werden können. Im Rahmen der Anwendung dieser Arbeit ist die axiale, coronale und sagittale Darstellung allerdings ausreichend.
+
+\begin{figure*}[htb]
+\centering
+\fbox{
+\subfigure[Rekonstruktion von der axialen zur coronalen Ebene]{\includegraphics[width=7cm]{./img/axialcoronalmpr.pdf} \label{mpr:ac}}
+\subfigure[Rekonstruktion von der axialen zur sagittalen Ebene]{\includegraphics[width=7cm]{./img/axialsagittalmpr.pdf} \label{mpr:as}}
+}
+\caption{Rekonstruktion der coronalen und sagittalen Ebene}
+\label{mpr}
+\end{figure*}
+
+Die Abbildungen \ref{mpr} zeigen jeweils die \textit{erste} Bildschicht der axialen Quelldarstellung als blaue und die \textit{letzte} Schicht der Zieldarstellung als rote Voxel. Da die Quell- und Zielebene immer orthogonal zueinander sind, kann auf zeitintensive Berechnungen verzichtet werden. Die neuen Bildebenen können über die Indizes der Pixel der verschiedenen Bilder schnell bestimmt werden. Die Bildgröße der rekonstruierten Ebene ist abhängig von der ursprünglichen Ebenendarstellung. So entspricht, wie Abbildung \ref{mpr:ac} zeigt, die Höhe(y) eines coronalen Bildes der Tiefe(z) einer axialen Darstellung und die coronale Tiefe(z) der axialen Höhe(y). Die Bildbreite bleibt unverändert. Die erste Pixelreihe der Rekonstruktion kann mit den Werten der letzten Reihe der ersten axialen Bildschicht belegt werden. Ein Algorithmus könnte wie folgt implementiert werden:
+
+\begin{algorithm}
+\caption{Berechnung der Bildebenen von axialer zu coronaler Darstellung}
+\begin{algorithmic}[1] 
+\STATE $images \leftarrow input$ - Quellbilder in axialer Darstellung
+\STATE $reconstruction \leftarrow output$ - rekonstruierte coronale Bildebenen
+\STATE $X_{coronal} \leftarrow X_{axial}$
+\STATE $Y_{coronal} \leftarrow Z_{axial}$
+\STATE $Z_{coronal} \leftarrow Y_{axial}$
+
+\FORALL{$z \in Z_{coronal}$}
+    \FORALL{$y \in Y_{coronal}$}
+        \FORALL{$x \in X_{coronal}$}
+        	\STATE $i \leftarrow$  get $image(y)$ from $images$ \COMMENT{$y$ entspricht dem $z$-Wert}
+        	\STATE $p \leftarrow$ get $pixel(x, z)$ from $i$ \COMMENT{$x$ entspricht dem $x$-Wert und $z$ dem $y$-Wert}
+            \STATE set $reconstructedPixel(xy)$ = $p$
+        \ENDFOR
+    \ENDFOR
+\ENDFOR
+
+\end{algorithmic}
+\label{mpr_algo}
+\end{algorithm}
+
+Nachdem die Bildebenen neu berechnet wurden, muss zusätzlich eine Drehung der Richtungsvektoren im DICOM-Tag \textit{ImageOrientation} vorgenommen werden. Aufgrund der Orthogonalität wird immer in 90$^\circ$-Winkeln um die x-, y- und z-Achsen gedreht. Dadurch wird gewährleistet, dass spätere Berechnungen, wie zum Beispiel die Beschriftung der Koordinatenachsen, korrekt durchgeführt werden können.
+Die Drehung erfolgt mit Hilfe der Drehmatrizen. Es wird zuerst um die x-, gefolgt von der y- und z-Achse rotiert.
+
+\begin{figure*}[tbp]
+%\subfigure[Keypoints]{\includegraphics[width=0.49\textwidth]{./img/basmati_keypoints.png}}\hfill
+\centering
+\fbox{
+\subfigure[Richtungsvektoren der axialen Bildebene werden um 90$^\circ$ um die x-Achse gedreht]{\includegraphics[width=6cm]{./img/rotation.pdf} \label{rota:a}}
+\subfigure[Richtungsvektoren in coronaler Ausrichtung]{\includegraphics[width=6cm]{./img/rotationc.pdf} \label{rota:c}}
+}
+\caption{Rotation der Richtungsvektoren von axialer zu coronaler Darstellung}
+\label{rota}
+\end{figure*}
+
+
+Die Abbildungen \ref{rota:a} und \ref{rota:c} zeigen den Prozess der Drehung von der axialen in die coronale Ebenendarstellung mit einer Rotation über 90$^\circ$ um die x-Achse.  Folgende Drehmatrix wird zur Berechnung eingesetzt \cite[7.3.2]{nisch:bv}. 
+
+\begin{equation}
+R^x=\left(
+			\begin{array}{c} 1 \\ 0 \\ 0 \\ 0 \end{array}
+			\begin{array}{c} 0 \\ \cos \alpha \\ \sin \alpha \\ 0 \end{array}
+			\begin{array}{c} 0 \\ -\sin \alpha \\ \cos \alpha \\ 0 \end{array}
+			\begin{array}{c} 0 \\ 0 \\ 0 \\ 1 \end{array}
+		\right)
+\vspace{0.5cm}
+\label{rotation_x}
+\end{equation}
+
+Die Rotationsrichtung und die Drehachse ist, wie die rekonstruierten Bilder, abhängig von der Quell- und Zieldarstellung. So könnte eine sagittale Darstellung aus axialen Richtungsvektoren durch eine Drehung um die x-Achse, gefolgt von einer Rotation um die z-Achse berechnet werden.
+
+\FloatBarrier
 
 \subsection{Berechnung der Bildkoordinaten}
 Die Werkzeuge zur Translation und Skalierung beeinflussen die Koordinaten des Bildes. Während das Verschieben unproblematisch für die Performance der Anwendung ist, hat die Skalierung, im Besonderen die Vergrößerung, maßgeblichen Einfluss auf die Rechenzeit. Angenommen die Zeichenfläche hat eine Größe von $500 \times 500$ und $250.000$ Pixel und das Bild mit den Maßen $1000 \times 1000$  und $1.000.000$ Pixel die doppelte Größe. Daraus folgt, dass maximal $\frac{1}{4}$ der Pixel des Bildes auf der Zeichenfläche angezeigt werden können. Die sechs Blöcke des Prozesses verarbeiten auch die nicht sichtbaren Anteile des Bildes und verbrauchen dadurch unnötig Rechenzeit. In dem Beispiel bedeutet das einen Mehraufwand von $75\%$. Um diese zusätzliche Rechenzeit einzusparen, darf die Berechnung der Bildkoordinaten nur den aktuell sichtbaren Bereich in die Rechnungen einbeziehen.\\
@@ -418,7 +497,7 @@ Beispiel \ref{orientationvecs} zeigt zwei Vektoren von \textit{ImageOrientation}
   \vspace{0.5cm}
 \end{figure}
 
-\subsubsection{Zeichnen der Orientierungslinien}
+\subsubsection{Zeichnen der Orientierungslinien}\label{scoutinglines}
 
 Wenn mehrerer gleiche Datensätze in unterschiedlichen Ebenendarstellungen geöffnet sind, helfen dem Anwender die Orientierungslinien bei der Navigation durch den dreidimensionalen Datensatz. Abbildung \ref{lines:single:a} zeigt eine axiale Ebenedarstellung als aktuelle Anzeige, die vom Benutzer bedient wird. Zusätzlich sind die coronale (Abbildung \ref{lines:c}) und sagittale Ansicht (Abbildung \ref{lines:s}) geöffnet. Da der Anwender in der axialen Ansicht arbeitet, werden Änderungen der Bildanzeige an die beiden Beobachter weitergegeben.\\
 Navigiert der Nutzer mit der Scrollleiste durch den axialen Datensatz, wird mit Hilfe des Oberserver-Musters bei jeder Änderung die aktuelle z-Koordinate der Bildschicht an die coronale und sagittale Darstellung übertragen. Dieser z-Wert wird an der entsprechenden Stelle der Bildschicht als, im Beispiel blaue, Orientierungslinie eingezeichnet. \\
@@ -470,27 +549,136 @@ Auch dieses Vorgehen ist abhängig von der Quell- und Zieldarstellung der aktive
 
 \subsection{Implementierung der Werkzeuge}
 
-Die Anzeige der Orientierungslinien komplettiert die Funktionalitäten zur Bilddarstellung, Navigation und Orientierung. Der nächste Schritt befasst sich mit der Manipulation der Bilddaten mit den zur Verfügung gestellten Werkzeugen.
+Die Anzeige der Orientierungslinien komplettiert die Funktionalitäten zur Bilddarstellung, Navigation und Orientierung. Der nächste Schritt befasst sich mit der Manipulation der Bilddaten mit den zur Verfügung gestellten Werkzeugen.\\
+Die Werkzeuge bilden die Schnittstelle zwischen Anwender und dem System. So werden Benutzereingaben entgegengenommen, interpretiert und auf der Zeichenfläche umgesetzt. Das \textit{DicomCanvas} reagiert mit Hilfe verschiedener \textit{Listener} auf die eintretenden Ereignisse, wie beispielsweise einem Mausklick oder Tastendruck. Diese Ereignisse, auch \textit{Events} genannt, werden an das Werkzeug weitergeleitet, damit das Bild und die Zeichenfläche manipuliert werden kann. Das Canvas ruft die Werkzeuge bei gängigen Maus-Events auf, die in der folgenden Liste genauer dargestellt werden.
+
+\begin{itemize}
+\item \textbf{MouseEnter} \\
+	Dieses Event wird ausgelöst, wenn der Mauszeiger die Zeichenfläche betritt.
+\item \textbf{MouseExit} \\
+	Das Ereignis ist das Gegenstück zu MouseEnter. Beim Verlassen tritt dieses Event ein.
+\item \textbf{MouseMove} \\
+	Solange sich der Mauszeiger auf der Zeichenfläche befindet und in Bewegung ist, wird das Werkzeug mit den aktuellen Koordinaten des Cursors aktualsiert.
+\item \textbf{MouseDown} \\
+	Dieses Ereignis tritt ein, wenn der Mauszeiger gedrückt wird und sich über der Zeichenfläche befindet. Zusätzlich wird im Werkzeug hinterlegt, dass eine Maustaste\footnote{Das Event wird unabhängig von der Nummer der gedrückten Maustaste ausgelöst. Innerhalb der Funktion, die das Ereignis abfängt, kann ausgelesen werden, ob die erste, zweiter oder dritte Maustaste betätigt wurde.} gedrückt wurde.
+\item \textbf{MouseUp} \\
+	Wird die Maustaste nach dem Drücken losgelassen, tritt das MouseUp-Ereignis ein. Dies wird innerhalb des Werkzeugs übernommen.
+\item \textbf{MouseWheel} \\
+	Beim Bewegen des Mausrads wird unabhängig von der Richtung das MouseWheel-Event ausgelöst\footnote{Die Drehrichtung kann, wie bei den Mausklicks, innerhalb der abfangenden Funktion ausgelesen werden}.
+\end{itemize}
+
+Zusätzlich zu den Ereignissen definieren Werkzeuge noch zwei Einhängepunkte (Hooks), die in den Zeichenprozess eingebunden werden. Wie in Abschnitt \ref{drawandmanipulate} in Abbildung \ref{imageprocess} dargestellt, werden diese Hooks vor der Berechnung der Bildkoordinaten und nach dem Zeichenprozess der Zusatzinformationen aufgerufen. Die Einhängepunkte bieten den Werkzeugen die Möglichkeit, etwas zu dem Zeichenprozess beizutragen, falls diese Funktion gewünscht ist. So kann beispielsweise ein Fenster am Mauszeiger gezeichnet werden, das aktuelle Informationen über Pixelwerte darstellt.\\
+Damit die Zeichenfläche gelesen und bearbeitet werden kann, steht jedem Werkzeug das zugehörige \textit{DicomCanvas} als Datenelement zur Verfügung. Dadurch können zum Beispiel die Daten der Zeichenfläche oder Bildinformationen ausgelesen werden. Dazu zählen unter anderem der Bildstapel sowie die aktuelle Bildschicht und die Koordinaten auf der Zeichenfläche. Die abstrakte Klasse der Werkzeuge \textit{ATool} liefert dem Entwickler die Informationen zum Mauszeiger und dessen Eigenschaften. Dazu zählen die aktuelle x- und y-Position des Cursors auf der Zeichenfläche und ob ein Button der Maus gedrückt ist. Wird eine der Maustasten betätigt, wird eine Startpunkt erstellt. Nach dem Loslassen des Buttons wird der Endpunkt gespeichert, womit Start und Ende die Strecke der Maus von zwei Punkten nach dem Drücken bis zum Loslassen darstellen.\\
+Aus diesen verfügbaren Informationen lassen sich vielfältige Werkzeuge erzeugen. 
 
 \subsubsection{Das Bild bewegen mit dem MoveTool}
+Mit Hilfe des \textit{MoveTools} lässt sich die aktuelle Bildschicht über die Zeichenfläche schieben. Beim ersten Klick innerhalb des \textit{DicomCanvas} speichert das Werkzeug die Cursorposition als Startpunkt. Solange die Maustaste gedrückt bleibt, wird der neue Mittelpunkt des Bildes aus der aktuellen Mauszeigerposition bestimmt. Die Berechnung erfolgt mit dem Verbindungsvektor aus Startpunkt S und dem Endpunkt E mit 
+\begin{equation}
+\overrightarrow{SE}=\left(\begin{array}{c} E_x - S_x \\ E_y  - S_y\\ \end{array}\right)
+\vspace{0.5cm}
+\end{equation}
+
+Die direkte Berechnung von $\overrightarrow{SE}$ ist aufgrund mehrerer aufeinanderfolgender Zeichenzyklen nicht möglich. Abbildung \ref{movetool} zeigt diese Zyklen durch die roten Pfeile. Bei jeder Mausbewegung wird die Zeichenfläche neu gezeichnet. 
+
+\begin{figure}[htbp]
+  \vspace{0.5cm}
+  \centering
+  \fbox{\includegraphics[angle=0,width=8cm]{./img/movetool.pdf}}
+   \caption{Translation des Bildmittelpunkts}
+  \label{movetool}
+  \vspace{0.5cm}
+\end{figure}
+
+Nach der ersten Translation befindet sich der Bildmittelpunkt an der Stelle $S + \overrightarrow{SE_1}$, in der folgenden an $S + \overrightarrow{SE_2}$ bis die Maus an $E_n$ losgelassen wird und der neue Bildmittelpunkt $S + \overrightarrow{SE_n}$ ist (Dargestellt durch die gestrichelten Linien). Da bei jeder Translation ein neuer Bildmittelpunkt bestimmt wird, erfolgt die richtige Berechnung aus der Differenz zwischen der vorherigen und der aktuellen Transformation. Durch Addition von Bildmittelpunkt und der Differenz erhält man das richtig translierte aktuelle Bildzentrum.
+
+\begin{equation}
+E_n= E_{n-1} + (\overrightarrow{SE_{n-1}}-\overrightarrow{SE_n})
+\vspace{0.5cm}
+\end{equation}
+
+$E_n$ ist der zu bestimmende Bildmittelpunkt für die Translation. Das aktuelle Zentrum ist $E_{n-1}$. Die zuletzt durchgeführte Verschiebung ist $\overrightarrow{SE_{n-1}}$, während die aktuelle durch $\overrightarrow{SE_n}$ dargestellt ist.
 
 \subsubsection{Skalierung mit dem ResizeTool}
 
+Das \textit{ResizeTool} ermöglicht dem Anwender das Bild zu verkleinern oder zu vergrößern. Durch das Zoomen können Details auch in kleinen Bildgrößen genauer betrachtet werden\footnote{Das vergrößerte Bild ist nur eine Interpolation der originalen Pixelwerte}.\\
+Ein Mausklick in die Zeichenfläche löst den Skalierungsprozess aus. Das Werkzeug reagiert speziell auf das \textit{MouseMove} Ereignis. Die Bewegung in y-Richtung auf der Zeichenfläche bestimmt den Skalierungsfaktor. Der Faktor wird folgendermaßen berechnet, wobei $S_y$ dem y-Wert des Startpunktes  und $E_y$ dem y-Wert des Endpunktes entspricht: 
+
+\begin{equation}
+scale = \frac{S_y - E_y}{100}
+\vspace{0.5cm}
+\end{equation}
+
+Ein Endpunkt in positiver Richtung\footnote{Da der Ursprung der Zeichenfläche in der oberen linken Ecke liegt, ist die positive y-Richtung die untere Kante des Canvas} vergrößert das Bild, während die ein Ziehen der Maus in die negative Richtung das Bild verkleinert. Mit einer Division durch $100$ entsprechen $10$ Pixel ein positiver oder negativer Richtung eine Größenänderung von $10\%$. Bei einem Verhältnis von $1:1$ lässt sich die Skalierung nicht mehr kontrollieren, da die Größe rasch zu- beziehungsweise abnimmt.\\
+Ähnlich dem \textit{MoveTool} muss vor der Skalierung der alte Faktor abgezogen werden, damit in gleichem Verhältnis skaliert wird.
+
+\subsubsection{Das DefaultTool}
+
+Das \textit{DefaultTool} stellt ein besonderes Werkzeug dar, da es selbst keine Funktionalitäten implementiert. Es nutzt die Funktionen des \textit{MoveTools} und des \textit{ResizeTools}. Im \textit{DefaultTool} wird geprüft, welche Maustaste gedrückt wird. Bei einem Linksklick wird das \textit{MoveTool} und der Translationsprozess ausgeführt. Ein Klick mit der rechten Maustaste in das Bild nimmt die Koordinaten des Cursors auf, um darauf alle weiteren Zeichenflächen, die Beobachter, zu informieren, dass ein Punkt gewählt wurde. Darauf aktualisieren die Beobachter Bildschicht und Orientierungslinien wie in Abschnitt \ref{scoutinglines} beschrieben. Das \textit{ResizeTool} wird durch das Drehen des Mausrads angestoßen und bewirkt pro Einheit eine Größenänderung von $10\%$.
+
 \subsubsection{Justierung der Fensterung mit dem WindowTool}
+
+Eine Einstellung der Fensterungswerte kann mit dem \textit{WindowTool} vorgenommen werden. Das Werkzeug arbeitet sowohl in der x-, als auch y-Richtung. Wird der Cursor auf der x-Achse bewegt, kann der Wert des Zentrums (\textit{WindowCenter}) angepasst werden. Die Fensterungsbreite (\textit{WindowWidth}) wird über die y-Achse eingestellt. Der Wert um wie viel \textit{WindowWidth} und \textit{WindowCenter} erhöht werden, wird mit dem Startpunkt $S$ und Endpunkt $E$ bestimmt. $\overrightarrow{SE}$ wird darauf auf die bestehenden Werte des Zentrums und der Fensterungsbreite addiert.
 
 \subsubsection{Punktauswahl mit dem PointTool}
 
-\section{Das Utility-Fenster}
+Das Werkzeug \textit{PointTool} erfüllt zwei Aufgaben. Zum einen gibt es die Möglichkeit einzelne Punkte zu markieren und im Bild zu hinterlegen, zum anderen können zu den Pixeln mit Hilfe eines Tooltips\footnote{Tooltips sind kleine Fenster, die an der Stelle des Cursors Informationen einblenden} zusätzliche Informationen angezeigt werden. Dazu zählen die Koordinaten des Pixels, der tatsächliche Wert und der mit Hilfe der Fensterung interpolierte Wert. Aus der aktuellen Position und den Bildkoordinaten kann bestimmt werden, ob der Cursor innerhalb des Bildes liegt. Liegt der Mauszeiger im Bild können Punkte gewählt und Informationen zu den Pixelwerten ausgegeben werden.
+\begin{itemize}
+\item \textbf{Punktauswahl}\\
+	Ein Punkt wird gewählt nachdem eine Maustaste betätigt und wieder gelöst wird. Liegt der Punkt innerhalb des Bildes, erfolgt eine Umrechnung in normalisierte Koordinaten im Intervall $[0,1]$ und wird dem Bild hinzugefügt.
+\item \textbf{Ausgabe der Information}\\
+	Das Anzeigen eines Tooltips ist ein Beispiel eines Einhängepunktes(Hook) für Werkzeuge. Ist der Zeichenprozess beendet, sollen die zusätzlichen Informationen auf die Zeichenfläche gemalt werden.
+	Dazu wird an der Position des Cursors ein Rechteckt mit den Pixeldaten gezeichnet.
+\end{itemize}
 
-\subsection{Debugging mit dem ConsoleView}
+\section{Dynamische Parametervergabe}
 
-\subsection{DICOM-Objekte über DicomTagView ausgeben}
+Mit dem Punktauswahlwerkzeug erhält der Benutzer die Möglichkeit, dynamisch spezifische Bildpunkte zu wählen. Die Selektion kann anschießend innerhalb eines Plug-ins ausgelesen werden. So können zum Beispiel Start- oder Saatpunkte für Algorithmen gesetzt werden. Als weiteren dynamischen Aspekt soll der Benutzer vor dem Ausführen eines Plug-ins selbst Parameter bestimmen können. So können beispielsweise Schwellwerte im Bezug zu speziellen Pixelwerten gewählt werden. Die dynamischen Parameter bestehen allerdings nicht immer aus numerischen Werten. So müssen ebenso Zeichenketten oder Dateien übergeben werden können. Durch die Dateiauswahl können beispielsweise Textdateien ausgewählt werden, die für ein Plug-in benötigte Datensätze enthalten. Des Weiteren besteht die Möglichkeit DICOM-Dateien zu laden, um unabhängige DICOM-Objekte innerhalb des Plug-ins als Referenzbilder zu erzeugen.\\
+Mit dem generischen Dialogfenster aus Abschnitt \ref{genericdialog} soll der Benutzer die Möglichkeit erhalten Parametertypen nach Wahl zusammenzustellen. Hierzu stellt die Klasse \textit{GenericPlugInDialog} verschiedene Typen zur Verfügung.
 
-\section{Implementierung des Hauptmenüs und der Werkzeugleiste}
+\begin{itemize}
+\item \textbf{Checkbox}\\
+Die Checkbox wird verwendet wenn ein bool'scher Parametertyp gewünscht wird. Markiert symbolisiert die Box den Wert \textit{true}, ansonsten \textit{false}.
+\begin{figure}[H]
+\includegraphics[angle=0,width=6cm]{./img/checkbox.png}
+\end{figure}
 
-\subsection{Das Hauptmenü}
+\item \textbf{RadioGroup}\\
+Mit Hilfe der Radio Group kann ein bestimmter Wert aus einer Gruppe gewählt werden. Der Parametertyp gibt jeweils die Selektion als Zeichenkette zurück.
+\begin{figure}[H]
+\includegraphics[angle=0,width=6cm]{./img/radiogroup.png}
+\end{figure}
 
-\subsection{Die Werkzeugleiste}
+\item \textbf{FileDialog}\\
+Mit dem FileDialog kann der Anwender eine Datei in das Plug-in laden. Wird der Parameter ausgelesen, wird der Pfad als Zeichenkette zurückgegeben.
+\begin{figure}[H]
+\includegraphics[angle=0,width=6cm]{./img/filedialog.png}
+\end{figure}
 
+\item \textbf{Slider}\\
+Der Slider definiert ein Intervall $[x,y]$ aus dem ein Wert gewählt werden kann. Dieser Parametertyp wird eingesetzt, wenn untere und obere Wertgrenzen existieren oder die Benutzereingabe begrenzt werden soll. Der Wert wird als Fließkommazahl zurückgegeben.
+\begin{figure}[H]
+\includegraphics[angle=0,width=6cm]{./img/slider.png}
+\end{figure}
 
+\item \textbf{StringItem, IntegerItem, FloatItem}\\
+Diese drei Parametertypen verhalten sich ähnlich. Sie nehmen den jeweiligen Wert des entsprechenden Typs entgegen und geben diesen beim Auslesen wieder zurück.
+\begin{figure}[H]
+\includegraphics[angle=0,width=6cm]{./img/stringitem.png}
+\end{figure}
+
+\end{itemize}
+
+Die unterschiedlichen Parametertypen können beliebig miteinander in einem einzigen Dialog kombiniert werden.
+
+\section{Debugging der eigenen Plug-ins}
+
+Das Java Medical Imaging Toolkit bietet sowohl eine dateibasierte, als auch eine visuelle Ausgabeart um das Debugging zu erleichtern und eventuelles Fehlverhalten der Plug-ins zu finden.
+
+\subsection{Dateibasiertes Debugging}
+Debugging hilft dem Benutzer Variablen zu überprüfen oder Programmabläufe zu verstehen. Da ein umfassendes Debugsystem nicht verfügbar ist, muss die Fehlersuche über Programmausgaben erfolgen. Die Standardausgabe nicht im Rich Client nicht einsehbar ist, wird mit Dateien gearbeitet, die Ausgaben protokollieren.\\
+In der Klasse \textit{APlugIn} ist eine Methode \textit{setOutput} definiert. Da sowohl \textit{APlugIn2D} als auch \textit{APlugIn3D} von dieser Klasse erben, ist die Methode in allen Plug-ins verfügbar. Wird diese zum Beispiel in den Optionen einen Plug-ins aufgerufen, wird die Standardausgabge \textit{out} von \textit{java.lang.System} auf die als Parameter spezifizierte Datei umgeleitet. Dadurch werden alle Aufrufe von \textit{System.out.println} in dieser Datei abgelegt.
+
+\subsection{Visuelles Debugging}
+In manchen Situationen ist es nützlich, spezielle Zwischenschritte der Algorithmen ausgeben zu lassen. Manche Bildverarbeitungsprozesse erwarten zum Beispiel ein vorgefiltertes Bild oder ein spezielles Bildformat wie ein Binärbild. Das visuelle Debugging erlaubt die Kontrolle dieser Zwischenschritte durch eine unabhängige Bildausgabe.\\
+Um diese Problematik zu lösen, ist im jMediKit die Klasse \textit{Visualizer} vorhanden. Die statische Methode \textit{show} nimmt entweder ein Bild oder eine Liste von Bildern entgegen. Wird diese aufgerufen, werden die übergebenen Bilder in einem separaten Fenster angezeigt.
 
